--- a/CMPUC_v0.vcxproj
+++ b/CMPUC_v0.vcxproj
@@ -135,12 +135,14 @@
     <ClCompile Include="Interface.cpp" />
     <ClCompile Include="lexer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="parser.cpp" />
     <ClCompile Include="token.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="exeptions.h" />
     <ClInclude Include="Interface.h" />
     <ClInclude Include="lexer.h" />
+    <ClInclude Include="parser.h" />
     <ClInclude Include="token.h" />
   </ItemGroup>
   <ItemGroup>
