more semantic analysis

--- a/CMPUC_v0.vcxproj
+++ b/CMPUC_v0.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="HashMatrix.cpp" />
     <ClCompile Include="lexer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Node.cpp" />
@@ -139,6 +140,7 @@
     <ClCompile Include="token.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="HashMatrix.h" />
     <ClInclude Include="lexer.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="parser.h" />
