going into the end

--- a/CMPUC_v0.vcxproj
+++ b/CMPUC_v0.vcxproj
@@ -150,6 +150,12 @@
   <ItemGroup>
     <None Include="input2.cmp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="output_AST.txt" />
+    <Text Include="output_lexer.txt" />
+    <Text Include="output_parser.txt" />
+    <Text Include="output_semantic.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
